--- a/ContactUs.html
+++ b/ContactUs.html
@@ -25,31 +25,31 @@
             <strong>Customer Care Numbers :</strong> 14646 OR 0755-6610661 / 0755-4090600 (Language: Hindi and English)
             <br>
             <br>
-            <strong>For Railways tickets booked through KVH
+            <strong>For Railways tickets booked through CSP
                 <br>
                 General Information
-                I-tickets/e-tickets : <a href="care@kvh.co.in">care@kvh.co.in</a> 
+                I-tickets/e-tickets : <a href="care@csp.co.in">care@csp.co.in</a> 
                 <br>
-                For Cancellation E-tickets : <a href="etickets@kvh.co.in">etickets@kvh.co.in</a>
+                For Cancellation E-tickets : <a href="etickets@csp.co.in">etickets@csp.co.in</a>
                 <br>
-                For KVH iMudra Prepaid Wallet & Card : 
+                For CSP iMudra Prepaid Wallet & Card : 
                 <br>
-                <a href="imudracare@kvh.co.in">imudracare@kvh.co.in</a>
+                <a href="imudracare@csp.co.in">imudracare@csp.co.in</a>
             </strong>
         </p>
         <br>
         <p>
-            For KVH SBI Card users who do not receive the card within
+            For CSP SBI Card users who do not receive the card within
             01 month from the date of application kindly call on the
             Railway SBI Card Helpline nos. at 0124-39021212 or 18001801295 
             (if calling from BSNL/MTNL line) or send email to <a href="customercare@sbicard.com">customercare@sbicard.com</a>.
-            For other queries on your KVH SBI card account, kindly email 
-            at <a href="loyaltyprogram@kvh.co.in">loyaltyprogram@kvh.co.in</a>
+            For other queries on your CSP SBI card account, kindly email 
+            at <a href="loyaltyprogram@csp.co.in">loyaltyprogram@csp.co.in</a>
                <br>
                <br>
             <strong>
                 Registered Office / Corporate Office <br>
-                KVH Tourism Corporation Ltd., <br>
+                CSP Tourism Corporation Ltd., <br>
                 B-148, 11th Floor, Statesman House, <br>
                 Barakhamba Road, New Delhi 110001
             </strong>
